crates/cli/tests/snapshots/run_legacy_test__run_legacy__output_styles__buffer.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: assert.output()
---
▮▮▮▮ installing node 18.0.0
▮▮▮▮ installing npm 8.19.0
▮▮▮▮ npm install
▮▮▮▮ outputStyles:buffer
       outputStyles:buffer | stdout
▮▮▮▮ outputStyles:buffer (100ms)
▮▮▮▮ outputStyles:bufferPrimary (no op)

Tasks: 2 completed
 Time: 100ms

       outputStyles:buffer | stderr
