crates/cli/tests/snapshots/run_legacy_test__run_legacy__output_styles__hash.snap
---
source: crates/cli/tests/run_legacy_test.rs
expression: assert.output()
---
▮▮▮▮ installing node 18.0.0
▮▮▮▮ installing npm 8.19.0
▮▮▮▮ npm install
▮▮▮▮ outputStyles:hash
▮▮▮▮ outputStyles:hash (100ms)
▮▮▮▮ outputStyles:hashPrimary (no op)

Tasks: 2 completed
 Time: 100ms

2a81a9f26fd7df66183c04f8c489de5f5789310626e84475d1fc25d98adac77d
